// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostFooter enables tooltip when myvote is false 1`] = `
<div
  data-stylename="footer"
>
  <RoundImageRow
    data-stylename="people"
    imageUrls={
      Array [
        "",
        "",
        "",
      ]
    }
  />
  <span
    data-stylename="caption"
    style={
      Object {
        "cursor": "inherit",
      }
    }
  >
    Joe, Scary and 2 others commented
  </span>
  <a
    data-for="postfooter-tt"
    data-stylename="vote-button"
    data-tip="Upvote this post so more people see it."
    data-tip-disable={false}
    onClick={[Function]}
  >
    <Icon
      data-stylename="arrowIcon"
      name="ArrowUp"
    />
    3
  </a>
  <Tooltip
    delay={550}
    id="postfooter-tt"
  />
</div>
`;

exports[`PostFooter matches the latest snapshot 1`] = `
<div
  data-stylename="footer"
>
  <RoundImageRow
    data-stylename="people"
    imageUrls={
      Array [
        "",
        "",
        "",
      ]
    }
  />
  <span
    data-stylename="caption"
    style={
      Object {
        "cursor": "inherit",
      }
    }
  >
    Joe, Scary and 2 others commented
  </span>
  <a
    data-for="postfooter-tt"
    data-stylename="vote-button voted"
    data-tip="Upvote this post so more people see it."
    data-tip-disable={true}
    onClick={[Function]}
  >
    <Icon
      data-stylename="arrowIcon"
      name="ArrowUp"
    />
    3
  </a>
  <Tooltip
    delay={550}
    id="postfooter-tt"
  />
</div>
`;

exports[`PostFooter matches the latest snapshot for event 1`] = `
<div
  data-stylename="footer"
>
  <RoundImageRow
    data-stylename="people"
    imageUrls={Array []}
  />
  <span
    data-stylename="caption"
    style={
      Object {
        "cursor": "inherit",
      }
    }
  >
    No one is attending yet
  </span>
  <Tooltip
    delay={550}
    id="postfooter-tt"
  />
</div>
`;

exports[`PostFooter matches the latest snapshot for project 1`] = `
<div
  data-stylename="footer"
>
  <RoundImageRow
    data-stylename="people"
    imageUrls={
      Array [
        "",
      ]
    }
  />
  <span
    data-stylename="caption"
    style={
      Object {
        "cursor": "inherit",
      }
    }
  >
    Sarah is a member
  </span>
  <a
    data-for="postfooter-tt"
    data-stylename="vote-button"
    data-tip="Upvote this post so more people see it."
    onClick={[Function]}
  >
    <Icon
      data-stylename="arrowIcon"
      name="ArrowUp"
    />
    0
  </a>
  <Tooltip
    delay={550}
    id="postfooter-tt"
  />
</div>
`;
